--- a/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
+++ b/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
     }
    ],
    "source": [
-    "df_train = pd.read_csv(\"data_processed/Train_Churn_processed.csv\")\n",
+    "df_train = pd.read_csv(\"../data_processed/Train_Churn_processed.csv\")\n",
     "df_train.head()"
    ]
   },
@@ -321,13 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 20 candidates, totalling 200 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 10 folds for each of 20 candidates, totalling 200 fits\n",
       "0.2153477494057204\n",
       "{'reglog__C': 1.0, 'reglog__penalty': 'l2'}\n",
       "Pipeline(steps=[('scaler', StandardScaler()), ('reglog', LogisticRegression())])\n"
@@ -412,18 +406,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 27 candidates, totalling 270 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.32300437083045774\n",
-      "{'classifier__max_features': 2, 'classifier__n_estimators': 10, 'selectkbest__k': 3}\n",
+      "Fitting 10 folds for each of 27 candidates, totalling 270 fits\n",
+      "0.32115251897860597\n",
+      "{'classifier__max_features': 1, 'classifier__n_estimators': 100, 'selectkbest__k': 3}\n",
       "Pipeline(steps=[('scaler', StandardScaler()), ('selectkbest', SelectKBest(k=3)),\n",
-      "                ('classifier',\n",
-      "                 RandomForestClassifier(max_features=2, n_estimators=10))])\n"
+      "                ('classifier', RandomForestClassifier(max_features=1))])\n"
      ]
     }
    ],
@@ -463,13 +450,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy_score 0.825\n",
-      "precision_score 0.7068965517241379\n",
-      "recall_score 0.2914691943127962\n",
-      "roc_auc_score 0.6295749013389076\n",
+      "accuracy_score 0.8235\n",
+      "precision_score 0.6994219653179191\n",
+      "recall_score 0.28672985781990523\n",
+      "roc_auc_score 0.626888376311727\n",
       "confusion_matrix\n",
-      " [[1527   51]\n",
-      " [ 299  123]]\n"
+      " [[1526   52]\n",
+      " [ 301  121]]\n"
      ]
     }
    ],
@@ -645,13 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 176 candidates, totalling 1760 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 10 folds for each of 176 candidates, totalling 1760 fits\n",
       "Pipeline(steps=[('scaler', StandardScaler()), ('selectkbest', SelectKBest(k=6)),\n",
       "                ('classifier', SVC(C=0.1))])\n",
       "0.7630051376428189\n",
@@ -718,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -871,19 +852,19 @@
        "4           537       0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test = pd.read_csv(\"data_processed/Test_Churn_processed.csv\")\n",
+    "df_test = pd.read_csv(\"../data_processed/Test_Churn_processed.csv\")\n",
     "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +883,7 @@
        "array([0, 0, 0, ..., 1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +904,7 @@
        "(2000, 13)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +924,7 @@
        "(2000,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1044,7 @@
        "                ('classifier', SVC(C=0.1))])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
