--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Steven\\Desktop\\Bank_Customer_Churn_Detection\\Proyecto_Machine_Learning_Bank_Customer_Churn_Detection\\noteooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -186,206 +204,53 @@
        "      <td>GOLD</td>\n",
        "      <td>425</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>9996</td>\n",
-       "      <td>15606229</td>\n",
-       "      <td>Obijiaku</td>\n",
-       "      <td>771</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>39</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>96270.64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>DIAMOND</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>9997</td>\n",
-       "      <td>15569892</td>\n",
-       "      <td>Johnstone</td>\n",
-       "      <td>516</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>35</td>\n",
-       "      <td>10</td>\n",
-       "      <td>57369.61</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101699.77</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>PLATINUM</td>\n",
-       "      <td>771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>9998</td>\n",
-       "      <td>15584532</td>\n",
-       "      <td>Liu</td>\n",
-       "      <td>709</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>36</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42085.58</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>SILVER</td>\n",
-       "      <td>564</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>9999</td>\n",
-       "      <td>15682355</td>\n",
-       "      <td>Sabbatini</td>\n",
-       "      <td>772</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>42</td>\n",
-       "      <td>3</td>\n",
-       "      <td>75075.31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>92888.52</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>GOLD</td>\n",
-       "      <td>339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>15628319</td>\n",
-       "      <td>Walker</td>\n",
-       "      <td>792</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>28</td>\n",
-       "      <td>4</td>\n",
-       "      <td>130142.79</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>38190.78</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>DIAMOND</td>\n",
-       "      <td>911</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      RowNumber  CustomerId    Surname  CreditScore Geography  Gender  Age  \\\n",
-       "0             1    15634602   Hargrave          619    France  Female   42   \n",
-       "1             2    15647311       Hill          608     Spain  Female   41   \n",
-       "2             3    15619304       Onio          502    France  Female   42   \n",
-       "3             4    15701354       Boni          699    France  Female   39   \n",
-       "4             5    15737888   Mitchell          850     Spain  Female   43   \n",
-       "...         ...         ...        ...          ...       ...     ...  ...   \n",
-       "9995       9996    15606229   Obijiaku          771    France    Male   39   \n",
-       "9996       9997    15569892  Johnstone          516    France    Male   35   \n",
-       "9997       9998    15584532        Liu          709    France  Female   36   \n",
-       "9998       9999    15682355  Sabbatini          772   Germany    Male   42   \n",
-       "9999      10000    15628319     Walker          792    France  Female   28   \n",
+       "   RowNumber  CustomerId   Surname  CreditScore Geography  Gender  Age  \\\n",
+       "0          1    15634602  Hargrave          619    France  Female   42   \n",
+       "1          2    15647311      Hill          608     Spain  Female   41   \n",
+       "2          3    15619304      Onio          502    France  Female   42   \n",
+       "3          4    15701354      Boni          699    France  Female   39   \n",
+       "4          5    15737888  Mitchell          850     Spain  Female   43   \n",
        "\n",
-       "      Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
-       "0          2       0.00              1          1               1   \n",
-       "1          1   83807.86              1          0               1   \n",
-       "2          8  159660.80              3          1               0   \n",
-       "3          1       0.00              2          0               0   \n",
-       "4          2  125510.82              1          1               1   \n",
-       "...      ...        ...            ...        ...             ...   \n",
-       "9995       5       0.00              2          1               0   \n",
-       "9996      10   57369.61              1          1               1   \n",
-       "9997       7       0.00              1          0               1   \n",
-       "9998       3   75075.31              2          1               0   \n",
-       "9999       4  130142.79              1          1               0   \n",
+       "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
+       "0       2       0.00              1          1               1   \n",
+       "1       1   83807.86              1          0               1   \n",
+       "2       8  159660.80              3          1               0   \n",
+       "3       1       0.00              2          0               0   \n",
+       "4       2  125510.82              1          1               1   \n",
        "\n",
-       "      EstimatedSalary  Exited  Complain  Satisfaction Score Card Type  \\\n",
-       "0           101348.88       1         1                   2   DIAMOND   \n",
-       "1           112542.58       0         1                   3   DIAMOND   \n",
-       "2           113931.57       1         1                   3   DIAMOND   \n",
-       "3            93826.63       0         0                   5      GOLD   \n",
-       "4            79084.10       0         0                   5      GOLD   \n",
-       "...               ...     ...       ...                 ...       ...   \n",
-       "9995         96270.64       0         0                   1   DIAMOND   \n",
-       "9996        101699.77       0         0                   5  PLATINUM   \n",
-       "9997         42085.58       1         1                   3    SILVER   \n",
-       "9998         92888.52       1         1                   2      GOLD   \n",
-       "9999         38190.78       0         0                   3   DIAMOND   \n",
+       "   EstimatedSalary  Exited  Complain  Satisfaction Score Card Type  \\\n",
+       "0        101348.88       1         1                   2   DIAMOND   \n",
+       "1        112542.58       0         1                   3   DIAMOND   \n",
+       "2        113931.57       1         1                   3   DIAMOND   \n",
+       "3         93826.63       0         0                   5      GOLD   \n",
+       "4         79084.10       0         0                   5      GOLD   \n",
        "\n",
-       "      Point Earned  \n",
-       "0              464  \n",
-       "1              456  \n",
-       "2              377  \n",
-       "3              350  \n",
-       "4              425  \n",
-       "...            ...  \n",
-       "9995           300  \n",
-       "9996           771  \n",
-       "9997           564  \n",
-       "9998           339  \n",
-       "9999           911  \n",
-       "\n",
-       "[10000 rows x 18 columns]"
+       "   Point Earned  \n",
+       "0           464  \n",
+       "1           456  \n",
+       "2           377  \n",
+       "3           350  \n",
+       "4           425  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/Customer-Churn-Records.csv\")\n",
-    "df"
+    "df = pd.read_csv(\"../data_raw/Customer-Churn-Records.csv\")\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +514,7 @@
        "max     1000.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +583,7 @@
        "1        2038"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +633,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +828,7 @@
        "4      GOLD           425       0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +947,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +967,7 @@
        "array(['Female', 'Male'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +997,7 @@
        "array(['France', 'Spain', 'Germany'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1027,7 @@
        "array(['DIAMOND', 'GOLD', 'SILVER', 'PLATINUM'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,11 +1055,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data_processed/Churn_processed.csv\", index = False)"
+    "df.to_csv(\"../data_processed/Churn_processed.csv\", index = False)"
    ]
   },
   {
@@ -1206,18 +1071,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train \n",
     "df_train = df.iloc[:8000, :]\n",
-    "df.to_csv(\"data_processed/Train_Churn_processed.csv\", index = False)"
+    "df.to_csv(\"../data_processed/Train_Churn_processed.csv\", index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1254,18 +1119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test\n",
     "df_test = df.iloc[8000:, :]\n",
-    "df_test.to_csv(\"data_processed/Test_Churn_processed.csv\", index = False)"
+    "df_test.to_csv(\"../data_processed/Test_Churn_processed.csv\", index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
