--- a/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
+++ b/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Proyecto Machine Learning\n",
     "+ # Bank Customer Churn Detection\n",
+    "![imagen](../img/img3.png)\n",
     "+ ## **Modelos Basline:**: \"Churn_processed.csv\""
    ]
   },
