--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Proyecto Machine Learning\n",
     "+ # Bank Customer Churn Detection\n",
+    "![imagen](../img/img2.png)\n",
     "+ ## **Exploración y procesamiento del Dataset:** [Kaggle - Bank Customer Data for Customer Churn](https://www.kaggle.com/datasets/radheshyamkollipara/bank-customer-churn)"
    ]
   },
