--- a/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
+++ b/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
@@ -558,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Abormdamos el problema del desbalance de los datos en el target \"Exited\":"
+    "Abordamos el problema del desbalance de los datos en el target \"Exited\":"
    ]
   },
   {
