--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -598,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eliminamo columnas que no aportan relevancia al proyecto:"
+    "Eliminamos columnas que no aportan relevancia al proyecto:"
    ]
   },
   {
