--- a/noteooks/Planteamiento_ProyectoML_1.ipynb
+++ b/noteooks/Planteamiento_ProyectoML_1.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "with zipfile.ZipFile('../data_raw/archive.zip') as zip_ref:\n",
-    "    zip_ref.extractall('data_raw')"
+    "    zip_ref.extractall('../data_raw')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4           425  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
