--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4           425  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "max     1000.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "1        2038"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "4      GOLD           425       0  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -886,28 +886,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eliminamos \"Complain\", ya que explica los mismo que el target \"Exited\":"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop(columns=[\"Complain\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Transformación de variables: tipos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -923,6 +907,7 @@
        "HasCrCard               int64\n",
        "IsActiveMember          int64\n",
        "EstimatedSalary       float64\n",
+       "Complain                int64\n",
        "Satisfaction Score      int64\n",
        "Card Type              object\n",
        "Point Earned            int64\n",
@@ -930,7 +915,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +935,7 @@
        "array(['Female', 'Male'], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +965,7 @@
        "array(['France', 'Spain', 'Germany'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +995,7 @@
        "array(['DIAMOND', 'GOLD', 'SILVER', 'PLATINUM'], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1059,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 8000 entries, 0 to 7999\n",
-      "Data columns (total 14 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
       " 0   CreditScore         8000 non-null   int64  \n",
@@ -1087,12 +1072,13 @@
       " 7   HasCrCard           8000 non-null   int64  \n",
       " 8   IsActiveMember      8000 non-null   int64  \n",
       " 9   EstimatedSalary     8000 non-null   float64\n",
-      " 10  Satisfaction Score  8000 non-null   int64  \n",
-      " 11  Card Type           8000 non-null   int64  \n",
-      " 12  Point Earned        8000 non-null   int64  \n",
-      " 13  Exited              8000 non-null   int64  \n",
-      "dtypes: float64(2), int64(12)\n",
-      "memory usage: 875.1 KB\n"
+      " 10  Complain            8000 non-null   int64  \n",
+      " 11  Satisfaction Score  8000 non-null   int64  \n",
+      " 12  Card Type           8000 non-null   int64  \n",
+      " 13  Point Earned        8000 non-null   int64  \n",
+      " 14  Exited              8000 non-null   int64  \n",
+      "dtypes: float64(2), int64(13)\n",
+      "memory usage: 937.6 KB\n"
      ]
     }
    ],
@@ -1102,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1108,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2000 entries, 8000 to 9999\n",
-      "Data columns (total 14 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
       " 0   CreditScore         2000 non-null   int64  \n",
@@ -1135,12 +1121,13 @@
       " 7   HasCrCard           2000 non-null   int64  \n",
       " 8   IsActiveMember      2000 non-null   int64  \n",
       " 9   EstimatedSalary     2000 non-null   float64\n",
-      " 10  Satisfaction Score  2000 non-null   int64  \n",
-      " 11  Card Type           2000 non-null   int64  \n",
-      " 12  Point Earned        2000 non-null   int64  \n",
-      " 13  Exited              2000 non-null   int64  \n",
-      "dtypes: float64(2), int64(12)\n",
-      "memory usage: 218.9 KB\n"
+      " 10  Complain            2000 non-null   int64  \n",
+      " 11  Satisfaction Score  2000 non-null   int64  \n",
+      " 12  Card Type           2000 non-null   int64  \n",
+      " 13  Point Earned        2000 non-null   int64  \n",
+      " 14  Exited              2000 non-null   int64  \n",
+      "dtypes: float64(2), int64(13)\n",
+      "memory usage: 234.5 KB\n"
      ]
     }
    ],
