--- a/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
+++ b/noteooks/Entrenamiento_Ev_ProyectoML_3.ipynb
@@ -640,7 +640,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 176 candidates, totalling 1760 fits\n",
+      "Fitting 10 folds for each of 176 candidates, totalling 1760 fits\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pipeline(steps=[('scaler', StandardScaler()), ('selectkbest', SelectKBest(k=5)),\n",
       "                ('classifier', LogisticRegression(C=0.1))])\n",
       "0.9981481481481482\n",
@@ -1096,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1215,7 @@
        "2          3           500  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1254,7 @@
        "array([1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
