--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -883,6 +883,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.drop(columns = [\"Complain\"], inplace = True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
