--- a/noteooks/Planteamiento_ProyectoML_1.ipynb
+++ b/noteooks/Planteamiento_ProyectoML_1.ipynb
@@ -52,7 +52,7 @@
     "5. Geography: País de residencia.\n",
     "6. Gender: Género.\n",
     "7. Age: Edad.\n",
-    "8. Tenure: Tiempo que lleva el clinte perteneciendo al banco. \n",
+    "8. Tenure: Tiempo que lleva el cliente perteneciendo al banco. \n",
     "9. Balance: Cantidad de dinero que tiene el cliente en el banco depositado.\n",
     "10. NumOfProducts: Número de productos que tiene un cliente asociados al banco.\n",
     "11. HasCrCard: Si el cliente tiene o no una tarjeta de crédito.\n",
