--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Exploración inicial"
+    "# 3. Exploración inicial"
    ]
   },
   {
@@ -929,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Procesamiento de datos."
+    "# 4. Procesamiento de datos."
    ]
   },
   {
@@ -2078,7 +2078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Exploración final del Dataset"
+    "# 5. Exploración final del Dataset"
    ]
   },
   {
@@ -2187,7 +2187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Decisiones finales respecto a las Features."
+    "# 6. Decisiones finales respecto a las Features."
    ]
   },
   {
@@ -2557,7 +2557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Dataset Final"
+    "# 7. Dataset Final"
    ]
   },
   {
@@ -2962,7 +2962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Guardamos Dataset Final que hemos analizado y procesado para crear los modelos de ML"
+    "# 8. Guardamos Dataset Final que hemos analizado y procesado para crear los modelos de ML"
    ]
   },
   {
@@ -2999,12 +2999,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = df.iloc[:8000, :]\n",
-    "df.to_csv(\"../data_processed/Train_Churn_processed.csv\", index = False)"
+    "df_train.to_csv(\"../data_processed/Train_Churn_processed.csv\", index = False)"
    ]
   },
   {
