--- a/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
+++ b/noteooks/Limpieza_EDA_ProyectoML_2.ipynb
@@ -530,6 +530,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -1282,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1376,7 @@
        "4                  349       115    464           0.2478"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,6 +1385,7 @@
     "Age_Exited = df.groupby(['Age Category', 'Exited']).size().unstack().rename(columns={0: 'Exited=0', 1: 'Exited=1'})\n",
     "Age_Exited['Total'] = Age_Exited.sum(axis=1)\n",
     "Age_Exited['Mean Exited = 1'] = round((Age_Exited['Exited=1']) / Age_Exited['Total'],4)\n",
+    "Age_Exited.to_csv(\"../data_csv/age_exited.csv\", index = False)\n",
     "Age_Exited"
    ]
   },
@@ -1674,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1745,7 @@
        "1                    46       280    326           0.8589"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,6 +1754,7 @@
     "Nop_Exited = df.groupby(['NumOfProducts', 'Exited']).size().unstack().rename(columns={0: 'Exited=0', 1: 'Exited=1'})\n",
     "Nop_Exited['Total'] = Nop_Exited.sum(axis=1)\n",
     "Nop_Exited['Mean Exited = 1'] = round((Nop_Exited['Exited=1']) / Nop_Exited['Total'],4)\n",
+    "Nop_Exited.to_csv(\"../data_csv/Nop_exited.csv\", index = False)\n",
     "Nop_Exited"
    ]
   },
@@ -1758,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1797,25 +1806,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>France</th>\n",
+       "      <th>0</th>\n",
        "      <td>4203</td>\n",
        "      <td>811</td>\n",
        "      <td>5014</td>\n",
        "      <td>0.1617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>1695</td>\n",
-       "      <td>814</td>\n",
-       "      <td>2509</td>\n",
-       "      <td>0.3244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Spain</th>\n",
+       "      <th>1</th>\n",
        "      <td>2064</td>\n",
        "      <td>413</td>\n",
        "      <td>2477</td>\n",
        "      <td>0.1667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1695</td>\n",
+       "      <td>814</td>\n",
+       "      <td>2509</td>\n",
+       "      <td>0.3244</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1824,12 +1833,12 @@
       "text/plain": [
        "Exited     Exited=0  Exited=1  Total  Mean Exited = 1\n",
        "Geography                                            \n",
-       "France         4203       811   5014           0.1617\n",
-       "Germany        1695       814   2509           0.3244\n",
-       "Spain          2064       413   2477           0.1667"
+       "0              4203       811   5014           0.1617\n",
+       "1              2064       413   2477           0.1667\n",
+       "2              1695       814   2509           0.3244"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,6 +1847,7 @@
     "Geo_Exited = df.groupby(['Geography', 'Exited']).size().unstack().rename(columns={0: 'Exited=0', 1: 'Exited=1'})\n",
     "Geo_Exited['Total'] = Geo_Exited.sum(axis=1)\n",
     "Geo_Exited['Mean Exited = 1'] = round((Geo_Exited['Exited=1']) / Geo_Exited['Total'],4)\n",
+    "Geo_Exited.to_csv(\"../data_csv/Geo_exited.csv\", index = False)\n",
     "Geo_Exited"
    ]
   },
@@ -1888,6 +1898,100 @@
     "card_type_mapping = {'DIAMOND': 0, 'GOLD': 1, 'PLATINUM': 2, 'SILVER': 3}\n",
     "df['Card Type'] = df['Card Type'].map(card_type_mapping)\n",
     "print(card_type_mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Exited</th>\n",
+       "      <th>Exited=0</th>\n",
+       "      <th>Exited=1</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Mean Exited = 1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Card Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1961</td>\n",
+       "      <td>546</td>\n",
+       "      <td>2507</td>\n",
+       "      <td>0.2178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>482</td>\n",
+       "      <td>2502</td>\n",
+       "      <td>0.1926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>508</td>\n",
+       "      <td>2495</td>\n",
+       "      <td>0.2036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>502</td>\n",
+       "      <td>2496</td>\n",
+       "      <td>0.2011</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Exited     Exited=0  Exited=1  Total  Mean Exited = 1\n",
+       "Card Type                                            \n",
+       "0              1961       546   2507           0.2178\n",
+       "1              2020       482   2502           0.1926\n",
+       "2              1987       508   2495           0.2036\n",
+       "3              1994       502   2496           0.2011"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CT_Ex = df.groupby(['Card Type', 'Exited']).size().unstack().rename(columns={0: 'Exited=0', 1: 'Exited=1'})\n",
+    "CT_Ex['Total'] = CT_Ex.sum(axis=1)\n",
+    "CT_Ex['Mean Exited = 1'] = round((CT_Ex['Exited=1']) / CT_Ex['Total'],4)\n",
+    "CT_Ex.to_csv(\"../data_csv/CT_Ex.csv\", index = False)\n",
+    "CT_Ex"
    ]
   },
   {
@@ -2562,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2715,13 +2819,299 @@
        "4           425             2                     4       0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Satisfaction Score</th>\n",
+       "      <th>Card Type</th>\n",
+       "      <th>Point Earned</th>\n",
+       "      <th>Age Category</th>\n",
+       "      <th>CreditScore Category</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.00000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.749500</td>\n",
+       "      <td>0.454300</td>\n",
+       "      <td>5.012800</td>\n",
+       "      <td>76485.889288</td>\n",
+       "      <td>0.032600</td>\n",
+       "      <td>0.70550</td>\n",
+       "      <td>0.515100</td>\n",
+       "      <td>100090.239881</td>\n",
+       "      <td>3.013800</td>\n",
+       "      <td>1.498000</td>\n",
+       "      <td>606.515100</td>\n",
+       "      <td>1.781100</td>\n",
+       "      <td>2.485100</td>\n",
+       "      <td>0.203800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.830433</td>\n",
+       "      <td>0.497932</td>\n",
+       "      <td>2.892174</td>\n",
+       "      <td>62397.405202</td>\n",
+       "      <td>0.177596</td>\n",
+       "      <td>0.45584</td>\n",
+       "      <td>0.499797</td>\n",
+       "      <td>57510.492818</td>\n",
+       "      <td>1.405919</td>\n",
+       "      <td>1.118356</td>\n",
+       "      <td>225.924839</td>\n",
+       "      <td>0.949249</td>\n",
+       "      <td>0.984518</td>\n",
+       "      <td>0.402842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.580000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>119.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>51002.110000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>410.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>97198.540000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100193.915000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>605.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>127644.240000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>149388.247500</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>801.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>250898.090000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>199992.480000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Geography        Gender        Tenure        Balance  NumOfProducts  \\\n",
+       "count  10000.000000  10000.000000  10000.000000   10000.000000   10000.000000   \n",
+       "mean       0.749500      0.454300      5.012800   76485.889288       0.032600   \n",
+       "std        0.830433      0.497932      2.892174   62397.405202       0.177596   \n",
+       "min        0.000000      0.000000      0.000000       0.000000       0.000000   \n",
+       "25%        0.000000      0.000000      3.000000       0.000000       0.000000   \n",
+       "50%        0.000000      0.000000      5.000000   97198.540000       0.000000   \n",
+       "75%        2.000000      1.000000      7.000000  127644.240000       0.000000   \n",
+       "max        2.000000      1.000000     10.000000  250898.090000       1.000000   \n",
+       "\n",
+       "         HasCrCard  IsActiveMember  EstimatedSalary  Satisfaction Score  \\\n",
+       "count  10000.00000    10000.000000     10000.000000        10000.000000   \n",
+       "mean       0.70550        0.515100    100090.239881            3.013800   \n",
+       "std        0.45584        0.499797     57510.492818            1.405919   \n",
+       "min        0.00000        0.000000        11.580000            1.000000   \n",
+       "25%        0.00000        0.000000     51002.110000            2.000000   \n",
+       "50%        1.00000        1.000000    100193.915000            3.000000   \n",
+       "75%        1.00000        1.000000    149388.247500            4.000000   \n",
+       "max        1.00000        1.000000    199992.480000            5.000000   \n",
+       "\n",
+       "          Card Type  Point Earned  Age Category  CreditScore Category  \\\n",
+       "count  10000.000000  10000.000000  10000.000000          10000.000000   \n",
+       "mean       1.498000    606.515100      1.781100              2.485100   \n",
+       "std        1.118356    225.924839      0.949249              0.984518   \n",
+       "min        0.000000    119.000000      0.000000              0.000000   \n",
+       "25%        0.000000    410.000000      1.000000              2.000000   \n",
+       "50%        1.000000    605.000000      2.000000              3.000000   \n",
+       "75%        2.000000    801.000000      2.000000              3.000000   \n",
+       "max        3.000000   1000.000000      4.000000              4.000000   \n",
+       "\n",
+       "             Exited  \n",
+       "count  10000.000000  \n",
+       "mean       0.203800  \n",
+       "std        0.402842  \n",
+       "min        0.000000  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%        0.000000  \n",
+       "max        1.000000  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tasa de abandono (Churn Rate):\n",
+    "- Una tasa de abandono de clientes cercana al 25% o por encima se considera alta, lo que significa que el banco debe centrarse más en la retención de clientes. \n",
+    "- La pérdida de clientes lleva a una disminución significativa en los ingresos, puede indicar un problema serio.\n",
+    "- En servicios financieros, como bancos o tarjetas de crédito, una tasa de abandono anual superior al 2-3% podría ser motivo de preocupación.\n",
+    "- Las altas tasas de abandono podrían indicar problemas con la satisfacción del cliente, la calidad del servicio o la competitividad de los productos ofrecidos. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.38"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "churn_rate = round((df['Exited'].eq(1).sum() / len(df['Exited'])) * 100,2)\n",
+    "churn_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.38"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round((df['Exited'] == 1).mean() * 100, 2)"
    ]
   },
   {
@@ -3009,6 +3399,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8000, 14)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
    "outputs": [
@@ -3060,6 +3470,26 @@
    "source": [
     "df_test = df.iloc[8000:, :]\n",
     "df_test.to_csv(\"../data_processed/Test_Churn_processed.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 14)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.shape"
    ]
   },
   {
